SUBDIRS = src

EXTRA_DIST = scripts/*.txt doc/manual.pdf src/gui/icons/*.svg src/gui/icons/*.png data/filters/* data/ff/* data/test/* TODO aten-0.95.3.spec

#filterdir = $(datadir)/aten/filters
#filter_DATA = data/filters/*

atendir = $(datadir)/aten

filterdir = $(atendir)/filters
filter_DATA = data/filters/*

ffdir = $(atendir)/ff
ff_DATA = data/ff/*

testdir = $(atendir)/test
test_DATA = data/test/*
