SUBDIRS = src

EXTRA_DIST = scripts/*.txt doc/manual.pdf src/gui/icons/*.* data/filters/* data/ff/* data/test/* TODO aten.spec CMakeLists.txt cmake_uninstall.cmake.in NSIS.template.in FindREADLINE.cmake src/CMakeLists.txt src/*/CMakeLists.txt desktop.cmake

#filterdir = $(datadir)/aten/filters
#filter_DATA = data/filters/*

atendir = $(datadir)/aten

filterdir = $(atendir)/filters
filter_DATA = data/filters/*

ffdir = $(atendir)/ff
ff_DATA = data/ff/*

testdir = $(atendir)/test
test_DATA = data/test/*
