SUBDIRS = src

EXTRA_DIST = scripts/*.txt doc/manual.pdf src/gui-qt/icons/*.svg src/gui-gtk/icons/*/*.xpm data/spgrp.dat data/filters/*

#filterdir = $(datadir)/aten/filters
#filter_DATA = data/filters/*

atendir = $(datadir)/aten

aten_DATA = data/spgrp.dat

filterdir = $(atendir)/filters
filter_DATA = data/filters/*

