add_library(base
atomaddress.h
atom.h
bond.h
bundle.h
cell.h
colourscalepoint.h
constants.h
dnchar.h
elements.h
forcefieldparams.h
forms.h
generator.h
glyph.h
log.h
mathfunc.h
measurement.h
messenger.h
parser.h
pattern.h
region.h
sysfunc.h
spacegroup.h
atomaddress.cpp
atom.cpp
bond.cpp
bundle.cpp
cell.cpp
colourscalepoint.cpp
dnchar.cpp
elements.cpp
forcefieldparams.cpp
forms.cpp
generator.cpp
glyph.cpp
log.cpp
mathfunc.cpp
measurement.cpp
messenger.cpp
parser.cpp
pattern.cpp
region.cpp
spacegroup.cpp
sysfunc.cpp
)

add_library(math
mathfunc.h
mathfunc.cpp
)

add_library(sg
generator.h
spacegroup.h
generator.cpp 
spacegroup.cpp
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
${CMAKE_SOURCE_DIR}/src/gui
)
